Trying to make it work for dynamic pages

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "cron": "^1.1.0",
     "dotenv": "^1.2.0",
-    "request": "^2.88.0",
+    "express": "latest",
+    "jsdom": "^13.0.0",
     "node-telegram-bot-api": "latest",
-    "express": "latest"
+    "request": "^2.88.0"
   }
 }
